4.4.9 -> 4.5:
	- jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
	- jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
	- jbj: tests: verify rpmrepo XML spewage using popt-1.14.
	- jbj: tests: verify XML/YAML markup queries using popt-1.14.
	- jbj: tests: download popt-1.14 packages for use in tests.
	- jbj: yaml: fix: single element string arrays had extra "- ".
	- jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
	- jbj: rpmsw: add rpmswPrint to display stopwtch results.
	- jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
	- jbj: rpmio: increase no. of digests from 4 => 32 for rpmdigest --all.
	- jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.
	- jbj: backport assorted rpmio changes from HEAD to stay in sync.
	- jbj: make sure the open path is set when using [bgl]zdOpen vector too.
	- jbj: lzdio: rework the layering to be more similar to gzdio/bzdio.
	- jbj: rpmrepo: fix: --lzma segfault, lzdFdopen was not saving path.
	- jbj: splint: annotate argvAppend differently.
	- jbj: add _fdopen to FDIO_t, expose fdbg(), make lzdio.c standalone.
	- jbj: expose XfdLink/XfdFree/XfdNew, nuke the FDIO_t vectors.
	- jbj: eliminate unused FDIO_t vectors. XfdLink/XfdFree/XfdNew need nuking.
	- jbj: create lzdio.c to carry lzma comprssion, possibly w dlopen().
	- jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
	- jbj: retrofit LCOV/GCOV same as other branches.
	- jbj: retrofit "make check" same as other branches.
	- jbj: rpmrepo: backport --yum:primary.xml et al popt aliases.
	- jbj: rpmrepo: add baseurl to the repo markup.
	- jbj: upgrade to db-4.7.25.
	- jbj: rpmrepo: populate sqlite schema with PACKAGESIZE and PACKAGEDIGEST.
	- jbj: rpmrepo: compute digests for both compressed & uncompressed
	       repository markup components.
	- jbj: retrofit additional ARGV_t argument through header formats.
	- jbj: retrofit RPM_UINT*_TYPE as defines.