@@ -74,25 +74,25 @@ crc32:26a1e2b8  ref/popt.xml
 crc64:9d1915b7064c6abd  ref/popt.xml
 adler32:7f94ba50  ref/popt.xml
 jlu32:1a707c45  ref/popt.xml
-md2:a0251536ed0a41c176d4e6c4516982c8  ref/popt.yaml
-md4:752910f4927ddc152352ce8d6307fc3e  ref/popt.yaml
-md5:acf09656afca51663e169634bf89a5ae  ref/popt.yaml
-sha1:7032e4d74dffcc2727f6e02b8ff362994573440d  ref/popt.yaml
-sha224:b1be16f5058d78bc7b5dd0ebfd991850de0ebf1cb5e20dcfe8f946fb  ref/popt.yaml
-sha256:1e409e44d56c062446899dd96bca95ec89456a4ea0a69a1de5c847a993fae836  ref/popt.yaml
-sha384:2137f254b386ec92f87d85d66d96dd930ec884c747390eaece48ba9ce59cd6ae4001c3465e1fb4c93459f6181799b450  ref/popt.yaml
-sha512:bd56c5a9654aa03ca0b2437e39d1297d36ac03b76a2e47387eded611d87fa0eeb5750d8eb3730bd382c462f60e6b8b10e4c5102e0f3e3bf267f21d67d9056e1c  ref/popt.yaml
-salsa10:71b47eb8721755cbd48d7010e3c16a558e8700a5ade7a2018b8818413fe7279bf578aee0f7a5ba6dddca06f990a0b69ef0f2902ea87988e170d2daaa8fd952ba  ref/popt.yaml
-salsa20:55f9e447700fad772fc4dee99559f8f33e311bf78ee0924638f20ae8df0cd27485e5bb7d633205720dea7c28e0c3cbf6b0f54c03ede1b5d2b7df9fe2216ef152  ref/popt.yaml
-rmd128:5532b89503cd335258a1b2579d94a5bf  ref/popt.yaml
-rmd160:398bbcd50c323128cf59ff2ce535130d1e990cc4  ref/popt.yaml
-rmd256:2efb770c8d45018b77cb861812f5e97b536c27356bb6d6e4c9a48b134ee2001b  ref/popt.yaml
-rmd320:25ff01aaebd9b9bad573cc8fe35f66a9270cb528e12e5fea8f133d15423daf6a523ec6e9feaff339  ref/popt.yaml
-tiger:0a5d3c3f3fa082cdf1daf2d365308109e729e8200003a7ce  ref/popt.yaml
-crc32:227612c9  ref/popt.yaml
-crc64:c315aed35aa2244f  ref/popt.yaml
-adler32:47e23958  ref/popt.yaml
-jlu32:9cac1b06  ref/popt.yaml
+md2:5db0c5ca794a6b791aae1cb7dfc777ba  ref/popt.yaml
+md4:89bc5f4e8dd5882549a68af6d52a865a  ref/popt.yaml
+md5:53f4fa9b405240a1f286b3762168d5d4  ref/popt.yaml
+sha1:149ae4e47cbd8fe2d8cb465b10fe02f1cb99c8fd  ref/popt.yaml
+sha224:bd7fbd0adc58bcdf901cd5abf2dda4c20842bc7698d52251f124f20f  ref/popt.yaml
+sha256:7c1939e0b1a23634664aff68be7a8a4fde17aa7ee624c9010f851d797500e2c2  ref/popt.yaml
+sha384:ac97af5c260a8a567490a173f7f4115874a08a6cbf649ff8583f915b08b91eebce335d910ef7a05b453a8ce830cb625d  ref/popt.yaml
+sha512:b9c93e080ec8def76b66ff7f3e3a26c2f1d7b751dd6874d7e28555a42e3b0a541f9b9c816d068d0e229a51eef1e57e54fa168af7090a6f27a96250beedb146ec  ref/popt.yaml
+salsa10:5ab10ea4c32ca36dceea5794a9618b7dd37376a0f19ae56176563342c3da12513b99c524448753b1b6efc52010da0462e0c370f2bf38dd17279cecaeca87ebe5  ref/popt.yaml
+salsa20:59fc66c103fd7431a704676b4808fbb5e708a770340007889ae478ca05ddc3e66274c9ec5559461db8a80ab48782da720eda8f3faa5e00f7b71c67ff3d1abebf  ref/popt.yaml
+rmd128:821bd88d825b840d42984215cabe9a68  ref/popt.yaml
+rmd160:da9fcb4e2b386c6ae808b8e7eee334db3d67bba9  ref/popt.yaml
+rmd256:6d40d0f8415ab56521cd7957463bbd282cda12e77d7f352aec73a63af73ad645  ref/popt.yaml
+rmd320:0d7885ad31476a23262044586f1ab78d043fc318c550c8c7f371a0e9e84091f0b6bb9c32b57fb918  ref/popt.yaml
+tiger:22ca4ba5c358ee05ba042bac756b0f3b208818af0302c1cf  ref/popt.yaml
+crc32:53511aa6  ref/popt.yaml
+crc64:ff5ed856764d03f8  ref/popt.yaml
+adler32:a70f392c  ref/popt.yaml
+jlu32:defb3c27  ref/popt.yaml
 md2:17f5c459013e0e1255442db2f522f53c  ref/primary.xml
 md4:0d449d9769d91c52f24fed56e866b6ea  ref/primary.xml
 md5:048c66b449d1efbbccee62a9d1c9437d  ref/primary.xml
